<resources>
    <string name="app_name">Campus Connect</string>
    <string name="welcome_to_campus_connect">Welcome to</string>
    <string name="login_btn_text">Login</string>
    <string name="sign_up_btn_text">Sign Up</string>
    <string name="email_text">Email</string>
    <string name="password_text">Password</string>
    <string name="sign_up_text">Sign Up</string>
    <string name="profile_image_content_desc">profile image</string>
    <string name="select_profile_photo">Select Profile Photo</string>
    <string name="full_name">Full Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="user_type">User Type</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="select_profile_photo_text">Select Profile Photo</string>
    <string name="profile_picture_content_desc">Profile picture</string>
    <string name="first_name_content_desc">First Name</string>
    <string name="middle_name_content_desc">Middle Name</string>
    <string name="last_name">Last Name</string>
    <string name="student_group">Student</string>
    <string name="organiser_group">Organiser</string>
    <string name="first_name">First Name</string>
    <string name="middle_name">Middle Name</string>
    <string name="log_out">Log Out</string>
</resources>