<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000C18"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/loginTitle"
        android:layout_width="244dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:fontFamily="@font/ar_one_sans"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#9969E4"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/emailInput"
        style="@style/Widget.AppCompat.AutoCompleteTextView"
        android:layout_width="400dp"
        android:layout_height="48dp"
        android:layout_marginBottom="16dp"
        android:background="#FFFFFF"
        android:backgroundTint="#FFFFFF"
        android:hint="@string/email_text"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:textAlignment="center"
        android:textColor="@color/black"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/passwordInput"
        style="@style/Widget.AppCompat.AutoCompleteTextView"
        android:layout_width="400dp"
        android:layout_height="50dp"
        android:layout_marginBottom="24dp"
        android:autofillHints=""
        android:background="@color/white"
        android:backgroundTint="#FDFDFD"
        android:hint="@string/password_text"
        android:inputType="textPassword"
        android:singleLine="true"
        android:textAlignment="center"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#9969E4"
        android:fontFamily="@font/ar_one_sans"
        android:text="@string/login_btn_text"
        android:textAlignment="center"
        android:textStyle="bold" />

</LinearLayout>

